# BioSNN-Py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
docs/: CONFIGURABLE_PARAMETERS_GUIDE.md  DOPAMINE_FIX_REPORT.md  LEARNING_FIX_ANALYSIS.md  MODULATOR_DEBUG_ANALYSIS.md  MODULATOR_FIX_SUMMARY.md  PERF_TUNING.md  ci.md  dashboard.md  logic_curriculum_feature_matrix.md  public_api.md
scripts/: bench_event_ring_vs_dense.py  bench_fused_spmm.py  bench_ring_strategies.py  bench_scale.py  bench_step.py  bench_synapses.py  bench_throughput.py  debug_learning.py  debug_or_weights.py  debug_supervised.py  debug_weights.py  demo_dashboard_population_topology.py  demo_engine_minimal.py  diag_detailed.py  diag_drive.py  diag_inner.py  diag_or_steps.py  diag_receptor.py  diag_reset.py  diag_spikes.py  diag_voltages.py  diag_weights.py  install_torch.ps1  read_trials.py  run_demo.py  run_or_best.py  sweep_aggressive.py  sweep_baseline.py  sweep_calibrated.py  sweep_connectivity.py  sweep_dense.py  sweep_drive_fixed.py  sweep_drive_scale.py  sweep_eligibility.py  sweep_error_only.py  sweep_explore.py  sweep_final.py  sweep_fine.py  sweep_focused.py  sweep_instantaneous.py  (+44 more)
tests/: conftest.py  test_cli_demo_flag.py  test_cuda_no_item_hot_path.py  test_delay_alignment.py  test_delayed_current_backend.py  test_delayed_sparse_matmul_backend.py  test_demo_network_smoke.py  test_distance_topology_builder.py  test_global_scalar_field.py  test_learning_and_modulators_end_to_end.py  test_metrics_csv_monitor.py  test_network_engine_learning.py  test_network_engine_routing.py  test_population_topology_payload.py  test_projection_weights_csv_monitor.py  test_random_topology_builder.py  test_signal_propagation_golden.py  test_sparse_learning.py  (+5 more)
(+333 files in other folders)
